--- a/Task12/css/style.css
+++ b/Task12/css/style.css
@@ -9,7 +9,11 @@
   margin-left: 20px;
   text-align: left;
   padding: 10px;
-  margin-top: 20px;
+  margin-top: 10px;
+}
+
+p {
+  margin-bottom: 10px;
 }
 
 .output {
